Fix - bug and hide overflow-y

--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ body{
     align-items: center;
     height: 100vh;
     z-index: 999;
+    overflow-y: hidden;
 }
 
 main{
@@ -62,7 +63,8 @@ main{
             height: 45rem;
             display: grid;
             margin-top: 50px;
-            grid-template-columns: repeat(3, 1fr);      
+            grid-template-columns: repeat(3, 1fr);    
+            overflow-y: hidden;  
             button{
                 padding: 0;
                 font-size: 35px;
